testsuite/tests/grammar/invalid_lkt/invalid_decl.lkt
grammar foo_grammar {
    grammar unexpected_decl {
    }
}
